fix: fix height of review card on mobile

--- a/web/src/components/pages/contribution/sentence-collector/review/review.css
+++ b/web/src/components/pages/contribution/sentence-collector/review/review.css
@@ -52,7 +52,6 @@
 
                 width: 100%;
                 height: 100%;
-                min-height: 320px;
 
                 background: var(--white);
                 box-shadow: 0 6px 19px 0 rgba(0, 0, 0, 0.05);
@@ -60,8 +59,13 @@
                 word-wrap: break-word;
 
                 opacity: 1;
-                transition: transform var(--transition-duration-slow) var(--easing),
+                transition: transform var(--transition-duration-slow)
+                        var(--easing),
                     opacity var(--transition-duration-slow) var(--easing);
+
+                @media (--lg-up) {
+                    min-height: 320px;
+                }
 
                 &.inactive {
                     pointer-events: none;
